[tool.poetry]
name = "retrieval-graph"
version = "0.0.1"
description = "Starter template for making a custom retrieval graph in LangGraph."
authors = ["Yasir <yasirkhalily44@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.0,<3.13"  # Updated to match both langgraph and langchain-pinecone requirements
langgraph = ">=0.2.6"
langchain-openai = ">=0.1.22"
langchain-anthropic = ">=0.1.23"
langchain = ">=0.2.14"
langchain-fireworks = ">=0.1.7"
python-dotenv = ">=1.0.1"
langchain-elasticsearch = ">=0.2.2,<0.3.0"
langchain-pinecone = ">=0.1.3,<0.2.0"
msgspec = ">=0.18.6"
langchain-mongodb = ">=0.1.9"
langchain-cohere = ">=0.2.4"

[tool.poetry.group.dev.dependencies]
mypy = ">=1.11.1"
ruff = ">=0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"